// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appview thread views v2 simple thread returns thread anchored on 1 1`] = `
Object {
  "thread": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": -1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(0)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "root",
        },
        "replyCount": 4,
        "repostCount": 0,
        "uri": "record(0)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(0)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 0,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": false,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(1)",
          "handle": "simple-alice.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "1",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(1)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(1)",
    },
  ],
}
`;

exports[`appview thread views v2 simple thread returns thread anchored on 2 1`] = `
Object {
  "thread": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": -1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(0)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "root",
        },
        "replyCount": 4,
        "repostCount": 0,
        "uri": "record(0)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(0)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 0,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": false,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(1)",
          "handle": "simple-bob.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(1)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(1)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": false,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(2)",
          "handle": "simple-alice.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(1)",
              "uri": "record(1)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "2_0",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(2)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(2)",
    },
  ],
}
`;

exports[`appview thread views v2 simple thread returns thread anchored on 2_0 1`] = `
Object {
  "thread": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": -2,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(0)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "root",
        },
        "replyCount": 4,
        "repostCount": 0,
        "uri": "record(0)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(0)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": -1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": false,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(1)",
          "handle": "simple-bob.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(1)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(1)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 0,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": false,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(2)",
          "handle": "simple-alice.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(1)",
              "uri": "record(1)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "2_0",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(2)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(2)",
    },
  ],
}
`;

exports[`appview thread views v2 simple thread returns thread anchored on 3 1`] = `
Object {
  "thread": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": -1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(0)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "root",
        },
        "replyCount": 4,
        "repostCount": 0,
        "uri": "record(0)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(0)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 0,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": false,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(1)",
          "handle": "simple-carol.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "3",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(1)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(1)",
    },
  ],
}
`;

exports[`appview thread views v2 simple thread returns thread anchored on r 0 1`] = `
Object {
  "thread": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": -1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(0)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "root",
        },
        "replyCount": 4,
        "repostCount": 0,
        "uri": "record(0)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(0)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 0,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "0",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(1)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(1)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(1)",
              "uri": "record(1)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "0_0",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(2)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(2)",
    },
  ],
}
`;

exports[`appview thread views v2 simple thread returns thread anchored on r 0_0 1`] = `
Object {
  "thread": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": -2,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(0)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "root",
        },
        "replyCount": 4,
        "repostCount": 0,
        "uri": "record(0)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(0)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": -1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "0",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(1)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(1)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 0,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(1)",
              "uri": "record(1)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "0_0",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(2)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(2)",
    },
  ],
}
`;

exports[`appview thread views v2 simple thread returns thread anchored on root 1`] = `
Object {
  "thread": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 0,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(0)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "root",
        },
        "replyCount": 4,
        "repostCount": 0,
        "uri": "record(0)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(0)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(1)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "0",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(1)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(1)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 2,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": true,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(0)",
          "handle": "simple-op.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(2)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(1)",
              "uri": "record(1)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "0_0",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(2)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(2)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": false,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(1)",
          "handle": "simple-alice.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(3)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "1",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(3)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(3)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": false,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(2)",
          "handle": "simple-bob.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(4)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(4)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(4)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 2,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": false,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(1)",
          "handle": "simple-alice.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(5)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(4)",
              "uri": "record(4)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "2_0",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(5)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(5)",
    },
    Object {
      "$type": "app.bsky.feed.defs#threadItemPost",
      "depth": 1,
      "hasOPLike": false,
      "hasUnhydratedParents": false,
      "hasUnhydratedReplies": false,
      "isOPThread": false,
      "post": Object {
        "$type": "app.bsky.feed.defs#postView",
        "author": Object {
          "did": "user(3)",
          "handle": "simple-carol.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "cid": "cids(6)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "3",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(6)",
        "viewer": Object {
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "uri": "record(6)",
    },
  ],
}
`;
